--- a/src/app/dashboard/notas/notas.component.html
+++ b/src/app/dashboard/notas/notas.component.html
@@ -1,1 +1,30 @@
-<p>notas works!</p>
+<div class="card">
+    <div class="card-header">
+     Promedio
+    </div>
+    <div class="card-body">
+      
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Ingrese nota1</label>
+            <input type="text"  [(ngModel)]="promedio.numero1"  class="form-control" id="txt1" >
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Ingrese nota2</label>
+            <input type="text" [(ngModel)]="promedio.numero2" class="form-control" id="txt2" >
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Ingrese nota3</label>
+            <input type="text" [(ngModel)]="promedio.numero3" class="form-control" id="txt2" >
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Ingrese nota4</label>
+            <input type="text" [(ngModel)]="promedio.numero4" class="form-control" id="txt2" >
+          </div>
+          <div>
+            <button type="button" (click)="calcular()" class="btn btn-primary">Calcular</button>
+            <div class="alert alert-primary" role="alert">
+                {{resultado}}
+            </div>
+          </div>
+    </div>
+  </div>
